1.99.3cvs20050825

1.99.4
Application:
- GLib and Gtk+ 2.6 is required now.
- Can optionally use FFTW v3 library (currently only for a few operations).
- System chdir() is no longer used, so that e.g. core is always dumped to the
  directory where app was started, otherwise directory behaviour has not
  changed.
- Color gradient and GL material ,editors`, currently can only set default
  gradient/GL material.

Library:
- libprocess: All interpolation is pixel-like instead of function-like now.
- libgwyddion: New GwyInventory uniform hash-and-array-like container class.
- libgwyddion: New GwyResource abstract base class for gradients, materials,
  and other goodies.  Resources can be loaded from and saved to external
  files.
- libdraw: GwyGradient is based on GwyResource, API reworked.  Gradients were
  un-hardcoded and are distributed as standalone text files now.
- libdraw, libwydgets: GwyGLMaterial was moved from libwydgets to libdraw,
  based on GwyResource, and more or less reimplemented.  GL materials were
  unhardcoded.  Material pixbuf samples are nicer.
- libgwydgets: New gradient and GL material selection and tree view
  constructors.  It's possible to set which gradients are directly displayed
  in data window color axis right-click menu.
- libgwydgets: GwySciText uses table-like layout for symbol combo box
  (bug #60) and was otherwise improved.
- libprocess: GwyEnum tables of standard enumerations are available in
  public API.
- libgwyddion: GwyEnum was split from gwyutils, a some functions added,
  GwyInventory support was added.
- libgwydgets: New class GwyInventoryStore wraps GwyInventory in GtkTreeModel
  interface.
- libgwydgets: Option menus were replaced with combo boxes.
- libgwyapp: Undo bug that might cause crashes was fixed.
- libprocess: Memory leaks in DWT were fixes and it was sped up.
- libgwyddion: gwywin32unistd.h was removed, use gstdio wrappers.
- libgwydgets, libgwyapp: A one global GtkTooltips object is used now,